fixed some minor alignment issues in the workout blocks

--- a/app/assets/stylesheets/components/_workout.scss
+++ b/app/assets/stylesheets/components/_workout.scss
@@ -2,7 +2,6 @@
   width: 400px;
   height: 340px;
   display: grid;
-  grid-template-rows: 220px 1fr;
   align-items: center;
 }
 
@@ -14,6 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-self: flex-end;
   button {
     font-family: $header-font;
     background-color: transparent;
